; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_pcm512x.c_pcm512x_remove.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_pcm512x.c_pcm512x_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.pcm512x_priv = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pcm512x_remove(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.pcm512x_priv*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load %struct.device*, %struct.device** %2, align 8
  %5 = call %struct.pcm512x_priv* @dev_get_drvdata(%struct.device* %4)
  store %struct.pcm512x_priv* %5, %struct.pcm512x_priv** %3, align 8
  %6 = load %struct.device*, %struct.device** %2, align 8
  %7 = call i32 @pm_runtime_disable(%struct.device* %6)
  %8 = load %struct.pcm512x_priv*, %struct.pcm512x_priv** %3, align 8
  %9 = getelementptr inbounds %struct.pcm512x_priv, %struct.pcm512x_priv* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @IS_ERR(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %18, label %13

13:                                               ; preds = %1
  %14 = load %struct.pcm512x_priv*, %struct.pcm512x_priv** %3, align 8
  %15 = getelementptr inbounds %struct.pcm512x_priv, %struct.pcm512x_priv* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @clk_disable_unprepare(i32 %16)
  br label %18

18:                                               ; preds = %13, %1
  %19 = load %struct.pcm512x_priv*, %struct.pcm512x_priv** %3, align 8
  %20 = getelementptr inbounds %struct.pcm512x_priv, %struct.pcm512x_priv* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @ARRAY_SIZE(i32 %21)
  %23 = load %struct.pcm512x_priv*, %struct.pcm512x_priv** %3, align 8
  %24 = getelementptr inbounds %struct.pcm512x_priv, %struct.pcm512x_priv* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @regulator_bulk_disable(i32 %22, i32 %25)
  ret void
}

declare dso_local %struct.pcm512x_priv* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @pm_runtime_disable(%struct.device*) #1

declare dso_local i32 @IS_ERR(i32) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @regulator_bulk_disable(i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
